docs/v0.3.4/_sources/gallery/density_plots/3_populations.rst.txt

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "gallery/density_plots/3_populations.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        :ref:`Go to the end <sphx_glr_download_gallery_density_plots_3_populations.py>`
        to download the full example code.

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_gallery_density_plots_3_populations.py:


Flow Cytometry Simulation with Two Populations: Density Plot of Scattering Intensities
======================================================================================

This example demonstrates how to simulate a flow cytometry experiment using the FlowCyPy library.
The simulation includes two populations of particles, and we analyze pulse signals from two detectors
to generate a 2D density plot of scattering intensities.

Workflow Summary:
1. Flow Setup: Configure flow parameters and define particle size distributions.
2. Laser GaussianBeam and Detector Setup: Define the laser source characteristics and configure the forward and side detectors.
3. Run the Experiment: Simulate the flow cytometry experiment.
4. Data Analysis: Analyze the pulse signals and generate a 2D density plot of the scattering intensities.

.. GENERATED FROM PYTHON SOURCE LINES 15-54

.. code-block:: Python


    # Step 1: Configuring Flow Parameters
    import numpy as np
    from FlowCyPy import FlowCell
    from FlowCyPy.units import meter, micrometer, millisecond, second, degree
    from FlowCyPy import Scatterer
    from FlowCyPy.units import particle, milliliter, nanometer, RIU, milliwatt, AU
    from FlowCyPy import FlowCytometer
    from FlowCyPy.detector import Detector
    from FlowCyPy.units import ohm, megahertz, ampere, volt, kelvin, watt, microsecond, microvolt
    from FlowCyPy import EventCorrelator, peak_locator
    from FlowCyPy import GaussianBeam
    from FlowCyPy import NoiseSetting
    from FlowCyPy.populations_instances import LDL, HDL, Exosome

    NoiseSetting.include_noises = False

    np.random.seed(3)  # Ensure reproducibility

    # Define the flow cell parameters
    flow_cell = FlowCell(
        flow_speed=7.56 * meter / second,        # Flow speed: 7.56 m/s
        flow_area=(10 * micrometer) ** 2,        # Flow area: 10 x 10 µm²
        run_time=0.2 * millisecond               # Simulation run time: 0.5 ms
    )

    # Step 2: Defining Particle Populations
    # Initialize scatterer with a medium refractive index
    scatterer = Scatterer(medium_refractive_index=1.33 * RIU)  # Medium refractive index of 1.33 (water)

    # Define populations with size distribution and refractive index
    scatterer.add_population(Exosome, concentration=10e+8 * particle / milliliter)
    scatterer.add_population(HDL, concentration=10e+8 * particle / milliliter)
    scatterer.add_population(LDL, concentration=10e+8 * particle / milliliter)

    scatterer.initialize(flow_cell=flow_cell)  # Link populations to flow cell
    scatterer.print_properties()               # Display population properties
    scatterer.plot()                           # Visualize the population distributions




.. image-sg:: /gallery/density_plots/images/sphx_glr_3_populations_001.png
   :alt: 3 populations
   :srcset: /gallery/density_plots/images/sphx_glr_3_populations_001.png
   :class: sphx-glr-single-img


.. rst-class:: sphx-glr-script-out

 .. code-block:: none


    Scatterer [] Properties
    +-----------------------------+----------+
    | Property                    | Value    |
    +=============================+==========+
    | coupling factor             | mie      |
    +-----------------------------+----------+
    | medium refractive index     | 1.3 RIU  |
    +-----------------------------+----------+
    | minimum time between events | 1.8 ns   |
    +-----------------------------+----------+
    | average time between events | 442.9 ns |
    +-----------------------------+----------+

    Population [Exosome] Properties
    +------------------+------------------------------+
    | Property         | Value                        |
    +==================+==============================+
    | Name             | Exosome                      |
    +------------------+------------------------------+
    | Refractive Index | Normal(1.390 RIU, 0.020 RIU) |
    +------------------+------------------------------+
    | Size             | RR(70.000 nm, 2.000)         |
    +------------------+------------------------------+
    | Concentration    | 1.0 Tparticle/l              |
    +------------------+------------------------------+
    | N events         | 151.0 particle               |
    +------------------+------------------------------+

    Population [HDL] Properties
    +------------------+------------------------------+
    | Property         | Value                        |
    +==================+==============================+
    | Name             | HDL                          |
    +------------------+------------------------------+
    | Refractive Index | Normal(1.330 RIU, 0.010 RIU) |
    +------------------+------------------------------+
    | Size             | RR(10.000 nm, 3.500)         |
    +------------------+------------------------------+
    | Concentration    | 1.0 Tparticle/l              |
    +------------------+------------------------------+
    | N events         | 151.0 particle               |
    +------------------+------------------------------+

    Population [LDL] Properties
    +------------------+------------------------------+
    | Property         | Value                        |
    +==================+==============================+
    | Name             | LDL                          |
    +------------------+------------------------------+
    | Refractive Index | Normal(1.350 RIU, 0.020 RIU) |
    +------------------+------------------------------+
    | Size             | RR(20.000 nm, 3.000)         |
    +------------------+------------------------------+
    | Concentration    | 1.0 Tparticle/l              |
    +------------------+------------------------------+
    | N events         | 148.0 particle               |
    +------------------+------------------------------+




.. GENERATED FROM PYTHON SOURCE LINES 55-56

Step 3: Laser GaussianBeam Configuration

.. GENERATED FROM PYTHON SOURCE LINES 56-104

.. code-block:: Python

    source = GaussianBeam(
        numerical_aperture=0.3 * AU,          # Laser numerical aperture: 0.3
        wavelength=488 * nanometer,           # Laser wavelength: 200 nm
        optical_power=20 * milliwatt          # Laser optical power: 20 mW
    )

    # Step 4: Simulating the Flow Cytometry Experiment
    # Initialize the cytometer and configure detectors
    # Add forward scatter detector
    detector_0 = Detector(
        name='forward',                         # Detector name: Forward scatter
        phi_angle=0 * degree,                   # Detector angle: 0 degrees (forward scatter)
        numerical_aperture=.2 * AU,             # Detector numerical aperture: 1.2
        responsitivity=1 * ampere / watt,       # Responsitivity: 1 A/W (detector response)
        sampling_freq=60 * megahertz,           # Sampling frequency: 60 MHz
        noise_level=0.0 * volt,                 # Noise level: 0 V
        saturation_level=1600 * microvolt,      # Saturation level: 5000 mV (detector capacity)
        resistance=150 * ohm,                   # Resistance: 1 ohm
        temperature=300 * kelvin,               # Operating temperature: 300 K (room temperature)
    )

    # Add side scatter detector
    detector_1 = Detector(
        name='side',                            # Detector name: Side scatter
        phi_angle=90 * degree,                  # Detector angle: 90 degrees (side scatter)
        numerical_aperture=.2 * AU,             # Detector numerical aperture: 1.2
        responsitivity=1 * ampere / watt,       # Responsitivity: 1 A/W (detector response)
        sampling_freq=60 * megahertz,           # Sampling frequency: 60 MHz
        noise_level=0.0 * volt,                 # Noise level: 0 V
        saturation_level=1600 * microvolt,      # Saturation level: 5 V (detector capacity)
        resistance=150 * ohm,                   # Resistance: 1 ohm
        temperature=300 * kelvin,               # Operating temperature: 300 K (room temperature)
    )


    cytometer = FlowCytometer(
        coupling_mechanism='mie',
        detectors=[detector_0, detector_1],
        source=source,
        scatterer=scatterer
    )

    # Run the flow cytometry simulation
    cytometer.simulate_pulse()

    # Visualize the scatter signals from both detectors
    cytometer.plot()




.. image-sg:: /gallery/density_plots/images/sphx_glr_3_populations_002.png
   :alt: 3 populations
   :srcset: /gallery/density_plots/images/sphx_glr_3_populations_002.png
   :class: sphx-glr-single-img





.. GENERATED FROM PYTHON SOURCE LINES 105-107

Step 5: Analyzing Pulse Signals
Configure peak finding algorithm

.. GENERATED FROM PYTHON SOURCE LINES 107-128

.. code-block:: Python

    algorithm = peak_locator.MovingAverage(
        threshold=0.1 * microvolt,           # Signal threshold: 0.1 mV
        window_size=1 * microsecond,         # Moving average window size: 1 µs
        min_peak_distance=0.3 * microsecond  # Minimum distance between peaks: 0.3 µs
    )

    detector_0.set_peak_locator(algorithm)
    detector_1.set_peak_locator(algorithm)

    # Initialize analyzer with the cytometer and algorithm
    analyzer = EventCorrelator(cytometer=cytometer)

    # Run the pulse signal analysis
    analyzer.run_analysis(compute_peak_area=False)

    # Step 6: Coincidence Data and 2D Density Plot
    # Extract coincidence data within a defined margin
    analyzer.get_coincidence(margin=0.1 * microsecond)

    # Generate and plot the 2D density plot of scattering intensities
    analyzer.plot(log_plot=False)



.. image-sg:: /gallery/density_plots/images/sphx_glr_3_populations_003.png
   :alt: 3 populations
   :srcset: /gallery/density_plots/images/sphx_glr_3_populations_003.png
   :class: sphx-glr-single-img






.. rst-class:: sphx-glr-timing

   **Total running time of the script:** (0 minutes 4.503 seconds)


.. _sphx_glr_download_gallery_density_plots_3_populations.py:

.. only:: html

  .. container:: sphx-glr-footer sphx-glr-footer-example

    .. container:: sphx-glr-download sphx-glr-download-jupyter

      :download:`Download Jupyter notebook: 3_populations.ipynb <3_populations.ipynb>`

    .. container:: sphx-glr-download sphx-glr-download-python

      :download:`Download Python source code: 3_populations.py <3_populations.py>`

    .. container:: sphx-glr-download sphx-glr-download-zip

      :download:`Download zipped: 3_populations.zip <3_populations.zip>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
